--- a/public/css/index.css
+++ b/public/css/index.css
@@ -54,7 +54,7 @@ a:not(.button):hover {
   a  {font-size: 18px;}
   p  {font-size: 16px;}
   article {
-    padding: 0 1.5em;
+    padding: 0 1em;
   }
 }
 
